tests/ui/rfcs/rfc-2294-if-let-guard/bindings.stderr
error[E0425]: cannot find value `y` in this scope
  --> $DIR/bindings.rs:6:14
   |
LL |         _ => y,
   |              ^ not found in this scope

error[E0425]: cannot find value `y` in this scope
  --> $DIR/bindings.rs:8:5
   |
LL |     y
   |     ^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
